--- a/plugin.xml
+++ b/plugin.xml
@@ -40,7 +40,8 @@ xmlns:android="http://schemas.android.com/apk/res/android"
             </feature>
         </config-file>
 
-        <framework src="com.android.support:design:26.0.+" />
+        <framework src="com.android.support:design:22.+" />
+        <framework src="com.android.support:appcompat-v7:22.+" />
 
         <source-file src="src/android/MaterialSnackbarPlugin.java"
             target-dir="src/by/chemerisuk/cordova/firebase/" />
